# pyuploadcare-example

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  secret.env.example
.github/workflows/: test.yml
app/: asgi.py  settings.py  urls.py  wsgi.py
app/uploadcare/: admin.py  apps.py  forms.py  models.py  urls.py
app/uploadcare/migrations/: 0001_initial.py
app/uploadcare/templates/: base.html  menu.html  pagination.html  project_info.html
app/uploadcare/templates/addons/: addons_execution_result_base.html  addons_execution_setup_base.html
app/uploadcare/templates/addons/addons_params/: clamav_virus_scan.html  remove_bg.html
app/uploadcare/templates/addons/execution_results/: remove_bg_result.html
app/uploadcare/templates/conversions/document/: request.html  status.html
app/uploadcare/templates/conversions/video/: request.html  status.html
app/uploadcare/templates/files/: _common_appdata.html  _common_info.html  _image_info.html  _metadata_info.html  _video_info.html  file_info.html  file_list.html  file_upload.html
app/uploadcare/templates/files/appdata_details/: _aws_moderation.html  _aws_recogntion.html  _clamav_scan_data.html  _remove_bg_data.html
app/uploadcare/templates/groups/: group_info.html  group_list.html
app/uploadcare/templates/posts/: post_confirm_delete.html  post_create.html  post_detail.html  post_list.html  post_update.html
app/uploadcare/templates/projects/: project_info.html
app/uploadcare/templates/webhooks/: webhook_create.html  webhook_info.html  webhook_list.html  webhook_update.html
app/uploadcare/templatetags/: aws_filters.py  image_info_filters.py
app/uploadcare/views/: addons.py  conversions.py  files.py  groups.py  metadata.py  posts.py  project.py  webhooks.py
