[tool.poetry]
name = "pyuploadcare-example"
version = "5.0.0"
description = "Example project for Python library for Uploadcare.com"
authors = ["Uploadcare Inc <hello@uploadcare.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
django-crispy-forms = "^1.13.0"
pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "feature/234-new_uploader"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^22.3"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |venv
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
src_paths = "app"
include_trailing_comma = "true"
lines_after_imports = 2
