[tool.poetry]
name = "pyuploadcare-example"
version = "5.0.0-1"
description = "Example project for Python library for Uploadcare.com"
authors = ["Uploadcare Inc <hello@uploadcare.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.2.10"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", tag = "v5.0.0"}

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |venv
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
src_paths = "app"
include_trailing_comma = "true"
lines_after_imports = 2
